--- a/TeacherFox/app/src/main/AndroidManifest.xml
+++ b/TeacherFox/app/src/main/AndroidManifest.xml
@@ -15,6 +15,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".QuestActivity"
+            android:label="@string/app_name">
+        </activity>
     </application>
    
 
