--- a/TeacherFox/app/src/main/AndroidManifest.xml
+++ b/TeacherFox/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
             android:label="@string/app_name">
         </activity>
     </application>
-   
+    <uses-permission android:name="android.permission.INTERNET"/>
+
+
 
 </manifest>
