--- a/TeacherFox/app/src/main/AndroidManifest.xml
+++ b/TeacherFox/app/src/main/AndroidManifest.xml
@@ -19,8 +19,9 @@
         </activity>
         <activity
             android:name=".QuestActivity"
-            android:label="@string/app_name"></activity>
-        <activity android:name=".Results"></activity>
+            android:label="@string/app_name" />
+        <activity android:name=".Results" />
+        <activity android:name=".Loja"></activity>
     </application>
 
 </manifest>
