--- a/TeacherFox/app/src/main/AndroidManifest.xml
+++ b/TeacherFox/app/src/main/AndroidManifest.xml
@@ -10,7 +10,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,9 +21,14 @@
         </activity>
         <activity
             android:name=".QuestActivity"
-            android:label="@string/app_name" />
-        <activity android:name=".Results" />
-        <activity android:name=".Loja"></activity>
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Results"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Loja"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Modo_estudo"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
