--- a/TeacherFox/app/src/main/AndroidManifest.xml
+++ b/TeacherFox/app/src/main/AndroidManifest.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.teacherfox.legendary.teacherfox">
-
-    <uses-permission android:name="android.permission.INTERNET" />
+    package="com.legendary.teacherfox">
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.TeacherFox" >
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait">
@@ -19,20 +18,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".QuestActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".Results"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".Loja"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".Modo_estudo"
-            android:screenOrientation="portrait" />
-        <activity android:name=".perfil"></activity>
     </application>
 
 </manifest>
