--- a/TeacherFox/app/src/main/AndroidManifest.xml
+++ b/TeacherFox/app/src/main/AndroidManifest.xml
@@ -18,6 +18,20 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".QuestActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Results"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Loja"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Modo_estudo"
+            android:screenOrientation="portrait" />
+        <activity android:name=".perfil"></activity>
     </application>
 
 </manifest>
